Se agrega spring security

--- a/to.do/to.do/src/main/resources/application.properties
+++ b/to.do/to.do/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=to.do
 
-spring.datasource.url = jdbc:h2:mem:testdb
-spring.h2.console.enabled = true
-spring.h2.console.path = /h2-console
+spring.datasource.url = ${DATABASE_URL}
+spring.datasource.username = securityApp
+spring.datasource.password=  securityApp
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+jwt.secret = ${SECRET_KEY}
+jwt.expiration = 300000000000000
